<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:title="@string/trainsMenuTestText"
        android:icon="@drawable/trains_selector"/>
    <item
        android:id="@+id/action_checkbox"
        android:enabled="true"
        android:title="@string/ordersMenuTestText"
        android:icon="@drawable/checkbox_selector"/>
    <item
        android:id="@+id/action_add"
        android:enabled="true"
        android:title="@string/addMenuTestText"
        android:icon="@drawable/add_selector"/>
    <item
        android:id="@+id/action_chat"
        android:enabled="true"
        android:title="@string/chatMenuTestText"
        android:icon="@drawable/chat_selector"/>
    <item
        android:id="@+id/action_more"
        android:enabled="true"
        android:title="@string/moreMenuTestText"
        android:icon="@drawable/more_selector"/>
</menu>